--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/public/Storytelling.png" />
+  <link rel="icon" type="image/png" href="/Storytelling.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Readerly | Em construção</title>
 
